--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+    "homepage": "https://mrroccky.github.io/movieflex",
     "name": "movieflex",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "dev": "vite",
         "build": "vite build",
         "preview": "vite preview"
@@ -12,6 +15,7 @@
         "@reduxjs/toolkit": "^1.9.1",
         "axios": "^1.2.2",
         "dayjs": "^1.11.7",
+        "gh-pages": "^6.1.1",
         "react": "^18.2.0",
         "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
