--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://mrroccky.github.io/movieflex",
+    "homepage": "https://mrroccky.github.io/movieflex/",
     "name": "movieflex",
     "private": true,
     "version": "0.0.0",
